--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -10,8 +10,19 @@
 
       <canvas id="canvas_1" style="margin-bottom:10px;margin-left:10px;border:1px solid #d3d3d3;">
       </canvas>
+      
+      <div id="scoreBoard_1">
+        <p>Score: </p><p id="score_1">0</p>
+        <p>Input parameters: </p><p id="input_params1"></p>
+      </div>
+      
       <canvas id="canvas_2" style="margin-bottom:10px;margin-left:10px;border:1px solid #d3d3d3;">
       </canvas>
+
+      <div id="scoreBoard_2">
+        <p>Score: </p><p id="score_2">0</p>
+        <p>Input parameters: </p><p id="input_params2"></p>
+      </div>
 
       <div id="mainMenu">
         <a class="button" href="javascript:startAllGames()">Play</a>
@@ -19,14 +30,6 @@
 
       <!-- Preloading image ;) -->
       <img id="sprite" src="http://i.imgur.com/2WEhF.png"/>
-
-      <div id="scoreBoard_1">
-        <p id="score_1">0</p>
-      </div>
-
-      <div id="scoreBoard_2">
-        <p id="score_2">0</p>
-      </div>
 
     </div>
 
