number of games

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -8,20 +8,7 @@
   <body>
     <div class="container">
 
-      <canvas id="canvas_1" style="margin-bottom:10px;margin-left:10px;border:1px solid #d3d3d3;">
-      </canvas>
-      
-      <div id="scoreBoard_1">
-        <p>Score: </p><p id="score_1">0</p>
-        <p>Input parameters: </p><p id="input_params1"></p>
-      </div>
-      
-      <canvas id="canvas_2" style="margin-bottom:10px;margin-left:10px;border:1px solid #d3d3d3;">
-      </canvas>
-
-      <div id="scoreBoard_2">
-        <p>Score: </p><p id="score_2">0</p>
-        <p>Input parameters: </p><p id="input_params2"></p>
+      <div id="game">
       </div>
 
       <div id="mainMenu">
