closes #1. Selection etc. copied from flappybird as starting values for #6.

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -19,7 +19,8 @@
       <img id="sprite" src="http://i.imgur.com/2WEhF.png"/>
 
     </div>
-
+    <script src = "../synaptic.min.js"></script>
+    <script src="../genetic.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
