implements non random seed

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -21,6 +21,7 @@
     </div>
     <script src = "../synaptic.min.js"></script>
     <script src="../genetic.js"></script>
+    <script src="../rng.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
