--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -8,11 +8,13 @@
   <body>
     <div class="container">
 
+      <div id="stats"></div>
+
       <div id="game">
       </div>
 
       <div id="mainMenu">
-        <a class="button" href="javascript:startAllGames()">Play</a>
+        <a class="button" href="javascript:startAllGames()">Start all games</a>
       </div>
 
       <!-- Preloading image ;) -->
