--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -8,6 +8,11 @@
   <body>
     <div class="container">
 
+      <div id="slidercontainer">
+        <input type="range" min="1" max="20" value="1" class="slider" id="speedUp">
+        <p>Game speed up factor: <span id="speedUpValue"></span></p>
+      </div>
+
       <div id="stats"></div>
 
       <div id="game">
