splitted classes in separate files

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -34,6 +34,11 @@
     <script src="../rng.js"></script>
     <script src="../plotly-latest.min.js"></script>
     <script src="statistics.js"></script>
+    <script src="game_elements/base.js"></script>
+    <script src="game_elements/game.js"></script>
+    <script src="game_elements/platforms.js"></script>
+    <script src="game_elements/player.js"></script>
+    <script src="game_elements/spring.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
