deleted too much

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -22,9 +22,7 @@
       <div id="statsCanvas"></div>
     </div>
     <div class="container" id="gameContainer">
-      <div id="game">
-      </div>
-
+      <div id="game"></div>
 
       <!-- Preloading image ;) -->
       <img id="sprite" src="http://i.imgur.com/2WEhF.png"/>
