Second page for executing algorithm multiple times at once, showing average and standard deviation in diagram.

--- a/doodle-jump/index_evaluation.html
+++ b/doodle-jump/index_evaluation.html
@@ -36,17 +36,18 @@
       <!-- Preloading image ;) -->
       <img id="sprite" src="http://i.imgur.com/2WEhF.png"/>
     </div>
+    <script type="text/javascript" src="networks_test_networks.json"></script>
     <script src = "../synaptic.min.js"></script>
     <script src="../genetic.js"></script>
     <script src="../rng.js"></script>
     <script src="../plotly-latest.min.js"></script>
-    <script src="statistics.js"></script>
     <script src="game_elements/base.js"></script>
     <script src="game_elements/game.js"></script>
     <script src="game_elements/platforms.js"></script>
     <script src="game_elements/player.js"></script>
     <script src="game_elements/spring.js"></script>
+    <script src="statistics_evaluation.js"></script>
     <script src="main_common.js"></script>
-    <script src="main.js"></script>
+    <script src="main_evaluation.js"></script>
   </body>
 </html>
