add replay button

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -19,7 +19,7 @@
         </div>
         <a class="button" id=stopButton href="javascript:stop()">Stop</a>
         <div id="togglecontainer">
-          Wait after all player died: 
+          Wait after all players died: 
           <label class="switch">
             <input type="checkbox" id="wait">
             <span class="toggle round"></span>
