model import function

--- a/doodle-jump/index.html
+++ b/doodle-jump/index.html
@@ -9,6 +9,7 @@
     <div class="container" id="statsContainer">
       <div id="mainMenu">
         <a class="button" id="startButton" href="javascript:startAllGames()">Start all games</a>
+        <input type="file" id="file-input" />
       </div>
 
       <div id="gamestats">
